# diskus

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: CICD.yml
ci/: before_deploy.bash
doc/: diskus.1
src/: filesize.rs  lib.rs  main.rs  walk.rs
src/walk/: mod.rs  unique_id.rs  unix.rs  windows.rs
tests/: walk.rs
