[package]
authors = ["David Peter <mail@david-peter.de>"]
categories = ["command-line-utilities"]
description = "A minimal, fast alternative to 'du -sh'."
homepage = "https://github.com/sharkdp/dup"
license = "MIT/Apache-2.0"
name = "du-dup"
readme = "README.md"
repository = "https://github.com/sharkdp/dup"
version = "0.2.0"

[[bin]]
name = "dup"
path = "src/main.rs"

[dependencies]
ignore = "0.4.3"
num_cpus = "1.0"
humansize = "1.1"

[dependencies.clap]
version = "2"
features = ["suggestions", "color", "wrap_help"]

[profile.release]
lto = true
codegen-units = 1
