cargo-features = ["publish-lockfile"]

[package]
authors = ["David Peter <mail@david-peter.de>"]
categories = ["command-line-utilities"]
description = "A minimal, fast alternative to 'du -sh'."
homepage = "https://github.com/sharkdp/diskus"
license = "MIT/Apache-2.0"
name = "diskus"
readme = "README.md"
repository = "https://github.com/sharkdp/diskus"
version = "0.4.0"
publish-lockfile = true

[dependencies]
num_cpus = "1.0"
humansize = "1.1"
rayon = "1.0"
crossbeam-channel = "0.3.0"

[dependencies.clap]
version = "2"
features = ["suggestions", "color", "wrap_help"]

[profile.release]
lto = true
codegen-units = 1
